# IrminView

./: .env.example  ARCHITECTURE.md  DOCKER_SETUP.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IRMIN_INTEGRATION.md  Makefile  README.md  TESTING.md  TEST_RESULTS.md  VISUAL_PROOF.md  docker-compose.dev.yml  docker-compose.yml  dune-project  irmin-bridge.opam  setup_irmin.sh
.github/workflows/: ci.yml
assets/demo-data/: demo-branches.json  demo-commits.json  demo-diffs.json  enterprise-tree.json
assets/mock-data/: sample-tree.json
demo-data/: init-demo.sh
docker/irmin-server/: Dockerfile
docker/irminview/: Dockerfile
docker/nginx/: nginx.conf
docs/: DEMO-SCENARIOS.md  UI-GUIDE.md
ocaml-bridge/lib/: dune  irmin_bridge.ml
ocaml-bridge/server/: dune  server.ml
scripts/: create_test_irmin_store.sh  mock_irmin_server.py  test_ui_with_real_data.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/irmin/: commands.rs  demo.rs  http_client.rs  integration.rs  mock_data.rs  mod.rs  types.rs
src-tauri/src/ui/: commands.rs  mod.rs  theme.rs
src-tauri/tests/: integration_tests.rs  irmin_integration_tests.rs  real_irmin_tests.rs
